# trimesh2

./: CMakeLists.txt  README.md
gluit/: CMakeLists.txt
include/: CMakeLists.txt  mathutil.h
libsrc/: CMakeLists.txt
utilsrc/: CMakeLists.txt
