function(util_prog util_name)
    add_executable(${util_name} ${util_name}.cc)
    target_include_directories(${util_name} PUBLIC ${TRIMESH_INCLUDE_DIR})
    target_link_libraries(${util_name} PUBLIC libtrimesh2)
endfunction()

util_prog(mesh_cat)
util_prog(mesh_cc)
util_prog(mesh_check)
util_prog(mesh_crunch)
util_prog(mesh_filter)
util_prog(mesh_hf)
util_prog(mesh_info)
util_prog(mesh_make)
util_prog(mesh_shade)
util_prog(grid_subsamp)
util_prog(xf)